--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     })()
   </script>
   <head>
-    
+    <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
   </head>
   <body>
     <br>
