--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     })()
   </script>
   <head>
+    <title>Hoidberg | Home</title>
+    <meta name="theme-color" content="#1e2327">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
   </head>
   <body>
