--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <head>
     <title>Hoidberg | Home</title>
-    <meta name="theme-color" content="#1e2327">
+    <meta name="theme-color" content="#dba24a">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
+    <!--Styles-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   </head>
   <body>
     <br>
