--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Hoidberg | Home</title>
-    <meta name="theme-color" content="#dba24a">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
     <!--Styles-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+    <style>
+      .w3-allerta {
+        font-family: "Allerta Stencil", Sans-serif;
+      }
+    </style>
   </head>
   <body>
     <br>
-    <p align="center" style="font-family:verdana;">WIP</p>
+    <div class="w3-panel w3-yellow">
+      <p align="center" class="w3-allerta" style="font-family:verdana;">WIP</p>
+    </div>
   </body>
 </html>
