--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <br>
-    <div class="w3-panel w3-yellow">
+    <div class="w3-panel w3-yellow w3-round-xxlarge">
       <p align="center" class="w3-allerta" style="font-family:verdana;">WIP</p>
     </div>
   </body>
