--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </head>
   <body>
     <br>
-    <div class="w3-panel w3-yellow w3-round-xxlarge">
-      <p align="center" class="w3-allerta" style="font-family:verdana;">WIP</p>
+    <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta">
+      <p align="center">WIP</p>
     </div>
   </body>
 </html>
