--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <br>
     <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta">
-      <p align="center">WIP</p>
+      <p align="center" class="w3-xxxlarge">WIP</p>
     </div>
   </body>
 </html>
