--- a/index.html
+++ b/index.html
@@ -7,13 +7,15 @@
     <!--Styles-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
     <style>
       .w3-allerta {
         font-family: "Allerta Stencil", Sans-serif;
       }
     </style>
+    <!--Scripts-->
   </head>
-  <body>
+  <body class="w3-container w3-flat-wet-asphalt">
     <br>
     <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta">
       <p align="center" class="w3-xxxlarge">WIP</p>
