--- a/index.html
+++ b/index.html
@@ -20,5 +20,12 @@
     <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta">
       <p align="center" class="w3-xxxlarge">WIP</p>
     </div>
+    <br>
+    <div class="w3-container w3-flat-turquoise">
+      <h2>Check out some of my projects!</h2>
+      <ul>
+        <li>ClassicEngine</li>
+      </ul>
+    </div>
   </body>
 </html>
