--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
     <br>
-    <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta">
+    <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta w3-animate-top">
       <p align="center" class="w3-xxxlarge">WIP</p>
     </div>
     <br>
-    <div class="w3-container w3-flat-turquoise">
+    <div class="w3-container w3-flat-turquoise w3-animate-left">
       <h2>Check out some of my projects!</h2>
       <ul>
         <li><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></li>
