--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <p align="center" class="w3-xxxlarge">WIP</p>
     </div>
     <br>
-    <div class="w3-container w3-flat-turquoise w3-animate-left">
+    <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
       <h2>Check out some of my projects!</h2>
       <ul>
         <li><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></li>
