--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
       <h2>Check out some of my projects!</h2>
       <ul>
-        <li><var><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></var></li>
+        <li><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></li>
       </ul>
     </div>
   </body>
