--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/index.css">
+    <link rel="stylesheet" href="index.css">
     <!--Scripts-->
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
