--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
     <!--Styles-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <!--Scripts-->
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
-    <br>
-    <div class="w3-panel w3-yellow w3-round-xxlarge w3-allerta w3-animate-top">
-      <p align="center" class="w3-xxxlarge">WIP</p>
-    </div>
     <br>
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
       <h2>Check out some of my projects!</h2>
