--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="w3-container w3-flat-wet-asphalt">
     <br>
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
-      <h2>Check out some of my projects!</h2>
+      <h2 class="w3-ibm-plex-sans">Check out some of my projects!</h2>
       <ul>
         <li><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></li>
       </ul>
