--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <br>
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
       <h2 class="w3-ibm-plex-sans">Check out some of my projects!</h2>
-      <ul class="w3-open-sans" style="text-decoration: none;">
-        <li><a href="https://hoidberg.github.io/ClassicEngineV2/">ClassicEngine</a></li>
+      <ul class="w3-open-sans">
+        <li><a href="https://hoidberg.github.io/ClassicEngineV2/" style="text-decoration: none;">ClassicEngine</a></li>
       </ul>
     </div>
   </body>
