--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <ul class="w3-open-sans">
         <li><a href="https://hoidberg.github.io/ClassicEngineV2/" style="text-decoration: none;">ClassicEngine</a></li>
       </ul>
+      <br>
+      <h2 class="w3-ibm-plex-sans">Social Media</h2>
     </div>
   </body>
 </html>
