--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       </ul>
       <br>
       <h2 class="w3-ibm-plex-sans">Social Media</h2>
+      <ul class="w3-open-sans">
+        <li><a href="https://www.facebook.com/hoidberg.joel.9" style="text-decoration: none;">Facebook</a></li>
+        <li><a href="https://twitter.com/hoidberg" style="text-decoration: none;">Twitter</a></li>
+      </ul>
     </div>
   </body>
 </html>
