--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <!--Scripts-->
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
+    <div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
+      <h1 class="w3-ibm-plex-mono">Hoidberg</h2>
+    </div>
     <br>
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
       <h2 class="w3-ibm-plex-sans">Check out some of my projects!</h2>
