--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!--Scripts-->
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
-    <div class="w3-display-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
-      <h1 class="w3-ibm-plex-mono w3-display-middle">Hoidberg</h2>
+    <div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
+      <h1 class="w3-ibm-plex-mono w3-center">Hoidberg</h2>
     </div>
     <br>
     <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
