--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
     <!--Scripts-->
+    <script src="index.js" />
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
     <div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
