--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <!--Styles-->
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap">
     <link rel="stylesheet" href="index.css">
     <!--Scripts-->
-    <script src="index.js" />
+    <script type="text/javascript" src="index.js"></script>
   </head>
   <body class="w3-container w3-flat-wet-asphalt">
     <div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
