--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <ul class="w3-open-sans">
         <li><a href="https://www.facebook.com/hoidberg.joel.9" style="text-decoration: none;">Facebook</a></li>
         <li><a href="https://twitter.com/hoidberg" style="text-decoration: none;">Twitter</a></li>
+        <li><a href="https://github.com/Hoidberg" style="text-decoration: none;">GitHub</a></li>
       </ul>
     </div>
   </body>
