--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <h2 class="w3-ibm-plex-sans">Social Media</h2>
       <ul class="w3-open-sans">
         <li><a href="https://www.facebook.com/hoidberg.joel.9" style="text-decoration: none; color:#dfe3ee;">Facebook</a></li>
-        <li><a href="https://twitter.com/hoidberg" style="text-decoration: none; color:#e8f5fd;">Twitter</a></li>
+        <li><a href="https://twitter.com/hoidberg" style="text-decoration: none; color:#fafbfc;">Twitter</a></li>
         <li><a href="https://github.com/Hoidberg" style="text-decoration: none; color:#fafbfc;">GitHub</a></li>
       </ul>
     </div>
