--- a/xMath/xMath.html
+++ b/xMath/xMath.html
@@ -1,15 +1,18 @@
-<link rel="stylesheet" href="https://latex.now.sh/lang/es.css" />
 <!DOCTYPE html>
-<html lang="es">
-  <head>
-    <script type="text/x-mathjax-config">
-      MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
-    </script>
-    <script type="text/javascript" async
-      src="https://example.com/mathjax/MathJax.js?config=TeX-AMS_CHTML">
-    </script>
-  </head>
-  <body>
-    E &= \frac{mc^2}{\sqrt{1-\frac{v^2}{c^2}}}
-  </body>
+<html>
+  	<head>
+    	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=default'></script>
+	</head>
+	<body>
+    	$$ { \int_{a}^b f(x)dx \approx \frac{b-a}{2n} \left(f(x_{0})+f(x_{n})+2 \sum^{n-1}_{i=1} f(x_{i})\right) } $$
+        $$ { \frac{\sqrt{2}}{12} \times b^3 } $$
+        $$ { 1 + \lfloor \log^{10} 999 \rfloor } $$
+        $$ { f'(x) = \lim_{h \to 0} \frac{f(x + h) - f(x)}{h} } $$
+        $$ { f'(x) \approx \frac{f(x + h) - f(x - h)}{2h},h \approx 0 } $$
+        $$ { e ^ {\frac{\ln{n}}{x}} } $$
+        $$ { \pi \times r^2 } $$
+        $$ { (\pi \times r^2) + (\pi \times (r \times l)) } $$
+		    <p>Vector2D uses: $$ { \frac{1}{x^2} \ + \ \frac{1}{z^2} \ = \ \frac{1}{y^2} } $$ to calulate the y</p>
+        
+    </body>
 </html>
