--- a/xMath/xMath.html
+++ b/xMath/xMath.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   	<head>
-    	<script src='https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/xMath/MathJax.js'></script>
+    	<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=default'></script>
 	</head>
 	<body>
     	$$ { \int_{a}^b f(x)dx \approx \frac{b-a}{2n} \left(f(x_{0})+f(x_{n})+2 \sum^{n-1}_{i=1} f(x_{i})\right) } $$
