--- a/index.html
+++ b/index.html
@@ -1,34 +1,1 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Hoidberg | Home</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="https://tr.rbxcdn.com/a85b5791475ad8c03b90f9b1bd577073/150/150/AvatarHeadshot/Png">
-    <!--Styles-->
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap">
-    <link rel="stylesheet" href="index.css">
-    <!--Scripts-->
-  </head>
-  <body class="w3-container w3-flat-wet-asphalt">
-    <div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge">
-      <h1 class="w3-ibm-plex-mono w3-center">Hoidberg</h2>
-    </div>
-    <br>
-    <div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large">
-      <h2 class="w3-ibm-plex-sans">Check out some of my projects!</h2>
-      <ul class="w3-open-sans">
-        <li><a href="https://hoidberg.github.io/ClassicEngineV2/" style="text-decoration: none;">ClassicEngine</a></li>
-      </ul>
-      <br>
-      <h2 class="w3-ibm-plex-sans">Social Media</h2>
-      <ul class="w3-open-sans">
-        <li><a href="https://www.facebook.com/hoidberg.joel.9" style="text-decoration: none; color:#dfe3ee;">Facebook</a></li>
-        <li><a href="https://twitter.com/hoidberg" style="text-decoration: none; color:#fafbfc;">Twitter</a></li>
-        <li><a href="https://github.com/Hoidberg" style="text-decoration: none; color:#fafbfc;">GitHub</a></li>
-      </ul>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html><head><meta charset="utf-8"><title>Hoidberg | Home</title><meta name="viewport" content="width=device-width, initial-scale=1"><link rel="icon" type="image/x-icon" href="https://tr.rbxcdn.com/a85b5791475ad8c03b90f9b1bd577073/150/150/AvatarHeadshot/Png"><link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"><link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css"><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap"><link rel="stylesheet" href="index.css"></head><body class="w3-container w3-flat-wet-asphalt"><div class="w3-container w3-flat-peter-river w3-animate-left w3-round-xxlarge"><h1 class="w3-ibm-plex-mono w3-center">Hoidberg</h2></div> <br><div class="w3-container w3-flat-turquoise w3-animate-left w3-round-large"><h2 class="w3-ibm-plex-sans">Check out some of my projects!</h2><ul class="w3-open-sans"><li><a href="https://hoidberg.github.io/ClassicEngineV2/" style="text-decoration: none;">ClassicEngine</a></li></ul> <br><h2 class="w3-ibm-plex-sans">Social Media</h2><ul class="w3-open-sans"><li><a href="https://www.facebook.com/hoidberg.joel.9" style="text-decoration: none; color:#dfe3ee;">Facebook</a></li><li><a href="https://twitter.com/hoidberg" style="text-decoration: none; color:#fafbfc;">Twitter</a></li><li><a href="https://github.com/Hoidberg" style="text-decoration: none; color:#fafbfc;">GitHub</a></li></ul></div></body></html>
