--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="utf-8">
       <title>Hoidberg | Home</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="icon" type="image/x-icon" href="https://tr.rbxcdn.com/a85b5791475ad8c03b90f9b1bd577073/150/150/AvatarHeadshot/Png">
+      <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Hoidberg/hoidberg.github.io/master/img/favicon.ico">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-colors-flat.css">
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=IBM+Plex+Sans&family=Open+Sans&display=swap">
