--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <li><a href="https://github.com/Hoidberg" style="text-decoration: none; color:#dfe3ee;">GitHub</a></li>
           </ul>
       </div>
-      <p>And by the way<p>
+      <p class="w3-open-sans">And by the way<p>
       <code>WWVzdGVyZGF5LCB1cG9uIHRoZSBzdGFpciwKSSBtZXQgYSBtYW4gd2hvIHdhc24/dCB0aGVyZQpIZSB3YXNuJ3QgdGhlcmUgYWdhaW4gdG9kYXkKSSB3aXNoLCBJIHdpc2ggaGU/ZCBnbyBhd2F5Li4=</code>
   </body>
 </html>
