--- a/other/test.html
+++ b/other/test.html
@@ -20,9 +20,12 @@
 			  window with the focus() method. There would be no need to re-create
 			  the window or to reload the referenced resource. */
 		};
-	};
-	
-	window.onload = function(){
-		openFFPromotionPopup();
 	}
 </script>
+
+<p><a
+ href="http://www.spreadfirefox.com/"
+ target="PromoteFirefoxWindowName"
+ onclick="openFFPromotionPopup();">
+	Click me!
+</a></p>
